force-app/main/default/objects/FEC_Notification_Channel__c/FEC_Notification_Channel__c.object-meta.xml
<CustomObject>
    <description>Là bảng dữ liệu chứa thông tin kênh của Notification</description>
    <label>Notification Channels</label>
    <nameField>
        <label>Notification Channel Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Notification Channels</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>