force-app/main/default/objects/FEC_Notification_Channel__c/fields/FEC_Create__c.field-meta.xml
<CustomField>
    <fullName>FEC_Create__c</fullName>
    <formula>ISBLANK(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is in Create mode</label>
    <type>Checkbox</type>
</CustomField>