force-app/main/default/objects/FEC_Notification_Channel__c/fields/FEC_Noti_Channel_ID__c.field-meta.xml
<CustomField>
    <fullName>FEC_Noti_Channel_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Mã kênh thông báo</description>
    <externalId>true</externalId>
    <label>Noti Channel ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>