force-app/main/default/objects/FEC_Notification_Channel__c/fields/FEC_Noti_Channel_Status__c.field-meta.xml
<CustomField>
    <fullName>FEC_Noti_Channel_Status__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Trạng thái kênh thông báo</description>
    <label>Noti Channel Status</label>
    <type>Checkbox</type>
</CustomField>