force-app/main/default/objects/FEC_Notification_Channel__c/fields/FEC_Noti_Channel_Vietnamese_name__c.field-meta.xml
<CustomField>
    <fullName>FEC_Noti_Channel_Vietnamese_name__c</fullName>
    <description>Tên kênh thông báo bằng tiếng Việt</description>
    <label>Noti Channel Vietnamese Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>